--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     <h3>Experience</h3>
     <u1>pharmacy keeper</u1>
     <div class="experience">
-      <h4>Studies</h4>
+      <h3>Studies</h3>
       <p>Universitas Buana Perjuangan Karawang</p>
       <p>Karawang, Indonesia</p>
       <p>jul 2023 - Present</p>
+      <h3>Education</h3>
+      <p>SMAN daramaraja</p>
       </div>
     </div>
     </div>
